# Sparse-domain-partitioning-for-lattice-Boltzmann-method

./: CMakeLists.txt  README.md  process_parameters.py
include/: app_context.h  generate_data_output.h  geometry_builder.h  geometry_data_store.h  geometry_partitioner.h  helpers.h  parameters_collector.h  process_data_entry.h  tile.h  tiling_parameters_store_modifiers.h
src/: generate_data_output.cpp  geometry_builder.cpp  geometry_partitioner.cpp  helpers.cpp  parameters_collector.cpp  process_data_entry.cpp  startup.cpp  tile.cpp  tiling_parameters_store_modifiers.cpp
